# Zamilovich

./: .flake8  .gitignore  DeleteCells.py  DeleteUsers.py  GetOrdersArray.py  RenameUsers.py  acceptIntbounds.py  asinhrom.py  bot.py  concatenatexlsx.py  config.ini.example  getSortablesStatusesHistory  importMsg.py  inboundsToTest.xlsx  jsomne.json  jsonToExcel.py  main.py  main.pyw  outlook.py  pyproject.toml  requirements.txt  results2 — копия.xlsx  results2.xlsx  scans.xlsx  updatesk.py  vgh async.py
.trunk/: .gitignore  trunk.yaml
input/: cellsToDelete.txt.example
rashodilis/2024-08-10/: Расхождения_TMU105524802.xlsx  Расхождения_TMU106651278.xlsx  Расхождения_TMU106660300.xlsx  Расхождения_TMU106851216.xlsx  Расхождения_TMU106859766.xlsx  Расхождения_TMU106906688.xlsx
rashodilis/2024-08-11/: Расхождения_TMU106785050.xlsx  Расхождения_TMU106867330.xlsx  Расхождения_TMU106917688.xlsx  Расхождения_TMU106920252.xlsx
rashodilis/2024-08-12/: Расхождения_TMU105909674.xlsx  Расхождения_TMU105987834.xlsx  Расхождения_TMU106666648.xlsx  Расхождения_TMU106822282.xlsx  Расхождения_TMU106828224.xlsx  Расхождения_TMU106859954.xlsx  Расхождения_TMU106864500.xlsx  Расхождения_TMU107231836.xlsx
rashodilis/2024-08-13/: Расхождения_TMU106035932.xlsx  Расхождения_TMU106632264.xlsx  Расхождения_TMU106637986.xlsx  Расхождения_TMU106721354.xlsx  (+7 more)
src/: DeleteUsers.py  acceptIntbounds.py  asinhrom.py  bot.py  getFilesAsync.py  getInboundByOrder.py  getSortablesStatusesHistory.py  main.py  main.pyw  pdf.py  test.py  utils.py  vgh async.py  whereFrom.py  zones.py
(+16 files in other folders)
